# natural-test

./: .gitignore  README.md  natural-test.cabal
src/Test/: Natural.hs
src/Test/Natural/: QuickCheck.hs  SmallCheck.hs
